--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "dependencies": {
         "express": "^4.17.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.5.0"
+        "dotenv": "^16.5.0",
+        "mongoose": "^8.14.3"
     },
     "devDependencies": {
         "nodemon": "^3.1.10"
