--- a/backend/package.json
+++ b/backend/package.json
@@ -8,9 +8,11 @@
         "start": "nodemon server.js"
     },
     "dependencies": {
-        "express": "^4.17.3",
+        "bcrypt": "^6.0.0",
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
+        "express": "^4.17.3",
+        "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.14.3"
     },
     "devDependencies": {
