--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
         "dotenv": "^16.5.0",
         "express": "^4.17.3",
         "jsonwebtoken": "^9.0.2",
-        "mongoose": "^8.14.3"
+        "mongoose": "^8.14.3",
+        "multer": "^1.4.5-lts.2"
     },
     "devDependencies": {
         "nodemon": "^3.1.10"
