--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.6.0",
+    "react-router-dom": "^7.6.0",
     "react-scripts": "^5.0.1"
   },
   "browserslist": {
