--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,11 @@
     "react-router-dom": "^7.6.0",
     "react-scripts": "^5.0.1"
   },
+  "devDependencies": {
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.38",
+    "tailwindcss": "^3.4.1"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
