--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
         "dotenv": "^16.5.0",
         "express": "^4.17.3",
         "express-validator": "^7.2.1",
+        "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.14.3",
         "multer": "^1.4.5-lts.2",
