--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
         "cors": "^2.8.5",
         "dotenv": "^16.5.0",
         "express": "^4.17.3",
+        "express-rate-limit": "^7.5.0",
         "express-validator": "^7.2.1",
         "helmet": "^8.0.0",
         "jsonwebtoken": "^9.0.2",
