--- a/vercel.json
+++ b/vercel.json
@@ -1,19 +1,17 @@
 {
   "version": 2,
-  "installCommand": "cd backend && npm install && cd ../frontend && npm install",
-  "buildCommand": "cd frontend && npm run build",
-  "outputDirectory": "frontend/build",
+  "installCommand": "npm install --prefix backend",
+  "buildCommand": "",
+  "outputDirectory": "public",
   "rewrites": [
     { "source": "/api/(.*)", "destination": "/api" },
     { "source": "/signup", "destination": "/api" },
     { "source": "/login", "destination": "/api" },
     { "source": "/products", "destination": "/api" },
-    { "source": "/products/(.*)", "destination": "/api" },
     { "source": "/cart", "destination": "/api" },
     { "source": "/cart/(.*)", "destination": "/api" },
     { "source": "/reviews", "destination": "/api" },
-    { "source": "/searchProducts", "destination": "/api" },
-    { "source": "/images/(.*)", "destination": "/api" }
+    { "source": "/searchProducts", "destination": "/api" }
   ],
   "functions": {
     "api/index.js": {
