Fix API routes for product endpoint

--- a/vercel.json
+++ b/vercel.json
@@ -11,8 +11,7 @@
     { "source": "/cart", "destination": "/api" },
     { "source": "/cart/(.*)", "destination": "/api" },
     { "source": "/reviews", "destination": "/api" },
-    { "source": "/searchProducts", "destination": "/api" },
-    { "source": "/product/(.*)", "destination": "/api" }
+    { "source": "/searchProducts", "destination": "/api" }
   ],
   "functions": {
     "api/index.js": {
