--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.14.3",
         "multer": "^1.4.5-lts.2",
-        "nodemailer": "^6.9.14"
+        "nodemailer": "^6.9.14",
+        "serverless-http": "^4.0.0"
     },
     "devDependencies": {
         "nodemon": "^3.1.10"
