--- a/vercel.json
+++ b/vercel.json
@@ -1,22 +1,8 @@
 {
   "version": 2,
-  "installCommand": "npm install --prefix backend",
   "buildCommand": "",
   "outputDirectory": "public",
   "rewrites": [
-    { "source": "/products", "destination": "/api/products" },
-    { "source": "/signup", "destination": "/api" },
-    { "source": "/login", "destination": "/api" },
-    { "source": "/cart", "destination": "/api" },
-    { "source": "/cart/(.*)", "destination": "/api" },
-    { "source": "/reviews", "destination": "/api" },
-    { "source": "/searchProducts", "destination": "/api" },
-    { "source": "/api/health", "destination": "/api" },
-    { "source": "/api/product/(.*)", "destination": "/api" }
-  ],
-  "functions": {
-    "api/index.js": {
-      "includeFiles": "backend/**"
-    }
-  }
+    { "source": "/(.*)", "destination": "/index.html" }
+  ]
 }
